@@ -20,6 +20,8 @@ Compatibility:
 - Non-LLVM based CCE compilers are no longer supported. Please upgrade.
 
 Bugfixes:
+- Fix crash when issuing multiple consecutive split collective IO operations on
+  the same file handle.
 
 ------------------- Released version 8.3 -----------------------------
 
